# SCD-Protocol

./: .gitignore  LICENSE  README.md  SCD_ENDURANCE_1000.json  SCD_v31_Academic_Paper.docx  pyproject.toml  scd_engine.py  scd_state_T3.json  verify_checksums.py
.github/workflows/: validate.yml
docs/: ARCHITECTURE_SPINE_LINK.md
examples/: basic_demo.py  basic_usage.py  cli_repl_demo.py  cross_vendor_handoff.py  cross_vendor_handoff_demo.py
examples/langgraph_demo/: README.md  scd_langgraph_example.py
mirrordna_scd/: __init__.py  core.py
mirrordna_scd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
